test/Fail/Cubical-without-glue-Import/Without-glue.agda
{-# OPTIONS --cubical-without-glue #-}

module Cubical-without-glue-Import.Without-glue where
